<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.fieldsoft.someonehavevisitedhere.LoginActivity" >

    <RelativeLayout
        android:id="@+id/TitleBar"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#393A3F" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/app_name"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/TitleBar"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20dp" >

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/user_image" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/pleaseInputEmail"
            android:inputType="textEmailAddress"
            android:id="@+id/EditTextUserEmail" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/pleaseInputPassword"
            android:inputType="textPassword" 
            android:id="@+id/EditTextUserPassword"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="90dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/button"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:onClick="Login" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/button"
            android:text="@string/register"
            android:textColor="#ffffff"
            android:onClick="Register" />
    </LinearLayout>

</RelativeLayout>