<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/BackGround"
    tools:context="com.fieldsoft.someonehavevisitedhere.MainActivity" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/Title" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/app_name"
            android:textColor="@color/TitleFont"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/ViewNormal" >

        <ImageView
            android:id="@+id/UserImage"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/user_image" />

        <RelativeLayout
            android:id="@+id/UserNameLayout"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@id/UserImage" >

            <TextView
                android:id="@+id/UserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NotLogined"
                android:textColor="@color/UserEmail"
                android:textSize="18dp"
                />

            <TextView
                android:id="@+id/UserType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/UserName"
                android:text="@string/NotLogined"
                android:textColor="@color/UserType"
                android:textSize="12dp" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/list_button"
        android:id="@+id/MyFootButton" >

        <ImageView
            android:id="@+id/LocationIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/location" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@id/LocationIcon"
            android:text="@string/MyFoot"
            android:textSize="18dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/list_button"
        android:id="@+id/AboutButton" >

        <ImageView
            android:id="@+id/SetIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/find" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@id/SetIcon"
            android:text="@string/About"
            android:textSize="18dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/list_button" 
        android:id="@+id/LogoutButton"
        >

        <ImageView
            android:id="@+id/LogoutIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/abc_btn_radio_material" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@id/LogoutIcon"
            android:text="@string/Logout"
            android:textSize="18dp" />
    </RelativeLayout>

</LinearLayout>